# libgtr

./: .gitmodules  CMakeLists.txt
libgtr/: gtr.h
src/: gtr.c  gtrP.h  plurals.inl  plurals.y
tests/: main.c
tests/resources/: basic.po  header.po  plurals-1.po  plurals-2.po  plurals-3.po  plurals-complex.po
tests/tests/: moparse.c  translate.c
